reservation create method
